# ChangeLog for dev-python/django-bootstrap3
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Aug 2015; Johann Schmitz <ercpe@gentoo.org>
  django-bootstrap3-4.11.0.ebuild, django-bootstrap3-4.7.0.ebuild,
  django-bootstrap3-5.0.2.ebuild, django-bootstrap3-5.1.1.ebuild,
  django-bootstrap3-5.2.0.ebuild, django-bootstrap3-5.3.1.ebuild,
  django-bootstrap3-5.4.0.ebuild, django-bootstrap3-6.1.0.ebuild:
  dev-python/django-bootstrap3: Updated ebuild headers and copyrights to match
  new repoman rules

*django-bootstrap3-6.1.0 (26 Jun 2015)

  26 Jun 2015; Justin Lecher <jlec@gentoo.org> +django-bootstrap3-6.1.0.ebuild:
  dev-python/django-bootstrap3: Version Bump

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  dev-python/django-bootstrap3: Add github to remote-id in metadata.xml

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  dev-python/django-bootstrap3: Add pypi to remote-id in metadata.xml

*django-bootstrap3-5.4.0 (22 Apr 2015)

  22 Apr 2015; Justin Lecher <jlec@gentoo.org> +django-bootstrap3-5.4.0.ebuild:
  dev-python/django-bootstrap3: Version Bump

*django-bootstrap3-5.3.1 (13 Apr 2015)

  13 Apr 2015; Justin Lecher <jlec@gentoo.org> +django-bootstrap3-5.3.1.ebuild:
  dev-python/django-bootstrap3: Version Bump

*django-bootstrap3-5.2.0 (28 Mar 2015)

  28 Mar 2015; Justin Lecher <jlec@gentoo.org> +django-bootstrap3-5.2.0.ebuild:
  dev-python/django-bootstrap3: Version Bump

  18 Mar 2015; Justin Lecher <jlec@gentoo.org> django-bootstrap3-5.1.1.ebuild:
  dev-python/django-bootstrap3: Add test

  18 Mar 2015; Justin Lecher <jlec@gentoo.org> django-bootstrap3-5.1.1.ebuild:
  dev-python/django-bootstrap3: Add pypy support

*django-bootstrap3-5.1.1 (18 Feb 2015)

  18 Feb 2015; Justin Lecher <jlec@gentoo.org> +django-bootstrap3-5.1.1.ebuild,
  metadata.xml:
  dev-python/django-bootstrap3: Version Bump

*django-bootstrap3-5.0.2 (29 Nov 2014)

  29 Nov 2014; Johann Schmitz <ercpe@gentoo.org>