@@ -6,3 +6,4 @@ DIST django-bootstrap3-5.2.0.tar.gz 33771 SHA256 0e728c869459d0ed58e6ad7aa667e0e
 DIST django-bootstrap3-5.3.1.tar.gz 33825 SHA256 4a18a9f7e8d5e140e02a29efa9510e52dc53e9f78850047be864e39472969723 SHA512 f7fe56564394408a40df45dbba54e037d0ba0f4afcf299992270fc7a7273599ec0b7eeebbe4350bd4eb7282f346a653696ee0b3a78b3c9a7aacfbe3fd3359928 WHIRLPOOL 71f4177101fbaf9731265599945cf0885d4393e2150f61e1934008736c85cd3f376dd2ca248e9ac096063c82b295f046d5f1bb4e474829572454a16cef7bcc32
 DIST django-bootstrap3-5.4.0.tar.gz 26806 SHA256 a2f579c8ed691e49d7dc3cd32e3065c6462896f286cff5c716457d5c730fdedc SHA512 239c9fcd700f209c1b04ff4a3600af3996cf33460ba60a0f7c997f7e91a16e3b0d49b9a77ae998fbd2d4ee8dc04c5b472f50ed472abe7650d8ed532fad90db0f WHIRLPOOL 0123e96937601e1f7c49dd963af0278f47d7a8df16f586d54ac2a1711cfcaa3b14e9b77df6e83928645762e36286f36a108354229e7b1d6999c050f240cc734f
 DIST django-bootstrap3-6.1.0.tar.gz 27291 SHA256 519948e5172aa1bffd3422e28c8b5362626d9a0b5a61eeaf78dd78d3feaad4a0 SHA512 bab60e7ef9e553519fd02af7411f01a4b858f90c86a0e7a5a59fb45e1eb874b312d81a788989a835a07d2a140b4eb01e44966010518cbde6556a3bbcfa348ed5 WHIRLPOOL 01512531d14d4e7422e282e1cc20e2a4838108e51412f4b7261bc1d01a548a01c5396a73341857f0a2c981eded319524b09ca3687cbb235e119e6d01a29ea2e0
+DIST django-bootstrap3-6.2.0.tar.gz 29423 SHA256 ff8f909e2e0aabc7050bdef1414fb3121d212af78bbbba2eff7079b134d26005 SHA512 8ec3038adc4823e645164a3780900f7bc52e95f57cf961a4f34437af9d53fd5376a549f30763d07743546384c39260347e779bc3936ebbe6280ddaabf66203bc WHIRLPOOL 60b73bfc81ca54c219429ddc6ea6c50a5df1e2ed9996c22222057774bc51342f93bb9a101305194456edaf3a6120c3c9664df3e9597abaf636bf39237bbbbbf5
