@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*django-bootstrap3-6.2.0 (15 Aug 2015)
+
+  15 Aug 2015; Johann Schmitz <ercpe@gentoo.org>
+  +django-bootstrap3-6.2.0.ebuild:
+  dev-python/django-bootstrap3: Version bump to 6.2.0
+
   15 Aug 2015; Johann Schmitz <ercpe@gentoo.org>
   django-bootstrap3-4.11.0.ebuild, django-bootstrap3-4.7.0.ebuild,
   django-bootstrap3-5.0.2.ebuild, django-bootstrap3-5.1.1.ebuild,
